--- a/BasicIpCameraSnapshot/Properties/launchSettings.json
+++ b/BasicIpCameraSnapshot/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "WebApplication4": {
+    "BasicIpCamera": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
