--- a/BasicIpCameraSnapshot/appsettings.json
+++ b/BasicIpCameraSnapshot/appsettings.json
@@ -6,36 +6,78 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System.Net.Http.HttpClient": "Warning"
     }
   },
-  "Camera": {
+  "AppSettings" : 
+  {
     "CacheTime" : 2500,
-    "Cameras": [
+    "Weather": 
+    {
+      "DelayBeforeStart": 5,
+      "Interval": 5,
+      "Stations":
       {
-        "Id": "1.jpg",
-        "Credential": "user:pass",
-        "Link": "http://192.168.4.1/ISAPI/Streaming/channels/101/picture"
-      },
-
-      {
-        "Id": "2.jpg",
-        "Credential": "user:pass",
-        "Link": "http://192.168.4.2/ISAPI/Streaming/channels/101/picture"
-      },
-
-      {
-        "Id": "3.jpg",
-        "Credential": "user:pass",
-        "Link": "http://192.168.4.3/ISAPI/Streaming/channels/101/picture"
-      },
-
-      {
-        "Id": "4.jpg",
-        "Credential": "user:pass",
-        "Link": "http://192.168.4.4/ISAPI/Streaming/channels/101/picture"
+        "ECCC" : {
+          "Name": "ECCC",
+          "Station": "https://dd.weather.gc.ca/citypage_weather/xml/BC/s0000141_e.xml",
+          "PosX": 651,
+          "PosY": 32,
+          "Line": 1,
+          "Enable": true
+        },
+        "theweathernetwork" : {
+          "Name": "theweathernetwork",
+          "Station": "https://weatherapi.pelmorex.com/api/v1/observation/placecode/cabc0308",
+          "PosX": 651,
+          "PosY": 40,
+          "Line": 2,
+          "Enable": true
+        }
       }
-    ]
+    },
+    "Cameras": {
+      "1.jpg": {
+        "Id": "1.jpg",
+        "Name" : "CAM1",
+        "Credential": "USER:PASS",
+        "BaseUrl" : "http://192.168.4.1",
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
+        "WeatherEnable": true
+      },
+
+      "2.jpg": {
+        "Id": "2.jpg",
+        "Name" : "CAM2",
+        "Credential": "USER:PASS",
+        "BaseUrl" : "http://192.168.4.2",
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
+        "WeatherEnable": true
+      },
+
+      "3.jpg": {
+        "Id": "3.jpg",
+        "Name" : "CAM3",
+        "Credential": "USER:PASS",
+        "BaseUrl" : "http://192.168.4.3",
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
+        "WeatherEnable": true
+      },
+
+      "4.jpg": {
+        "Id": "4.jpg",
+        "Name" : "CAM4",
+        "Credential": "USER:PASS",
+        "BaseUrl" : "http://192.168.4.4",
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
+        "WeatherEnable": true
+      }
+    }
   },
   "AllowedHosts": "*"
 }
