tweaked some logic, moved to .net7, splitted weather and viewer

--- a/BasicIpCameraSnapshot/appsettings.json
+++ b/BasicIpCameraSnapshot/appsettings.json
@@ -10,72 +10,30 @@
       "System.Net.Http.HttpClient": "Warning"
     }
   },
-  "AppSettings" : 
-  {
-    "CacheTime" : 2500,
-    "Weather": 
-    {
-      "DelayBeforeStart": 5,
-      "Interval": 5,
-      "Stations":
-      {
-        "ECCC" : {
-          "Name": "ECCC",
-          "Station": "https://dd.weather.gc.ca/citypage_weather/xml/BC/s0000141_e.xml",
-          "PosX": 651,
-          "PosY": 32,
-          "Line": 1,
-          "Enable": true
-        },
-        "theweathernetwork" : {
-          "Name": "theweathernetwork",
-          "Station": "https://weatherapi.pelmorex.com/api/v1/observation/placecode/cabc0308",
-          "PosX": 651,
-          "PosY": 40,
-          "Line": 2,
-          "Enable": true
-        }
-      }
-    },
+  "AppSettings": {
     "Cameras": {
       "1.jpg": {
-        "Id": "1.jpg",
-        "Name" : "CAM1",
         "Credential": "USER:PASS",
-        "BaseUrl" : "http://192.168.4.1",
-        "Picture": "/ISAPI/Streaming/channels/101/picture",
-        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
-        "WeatherEnable": true
+        "BaseUrl": "http://192.168.4.1",
+        "Picture": "/ISAPI/Streaming/channels/101/picture"
       },
 
       "2.jpg": {
-        "Id": "2.jpg",
-        "Name" : "CAM2",
         "Credential": "USER:PASS",
-        "BaseUrl" : "http://192.168.4.2",
-        "Picture": "/ISAPI/Streaming/channels/101/picture",
-        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
-        "WeatherEnable": true
+        "BaseUrl": "http://192.168.4.2",
+        "Picture": "/ISAPI/Streaming/channels/101/picture"
       },
 
       "3.jpg": {
-        "Id": "3.jpg",
-        "Name" : "CAM3",
         "Credential": "USER:PASS",
-        "BaseUrl" : "http://192.168.4.3",
-        "Picture": "/ISAPI/Streaming/channels/101/picture",
-        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
-        "WeatherEnable": true
+        "BaseUrl": "http://192.168.4.3",
+        "Picture": "/ISAPI/Streaming/channels/101/picture"
       },
 
       "4.jpg": {
-        "Id": "4.jpg",
-        "Name" : "CAM4",
         "Credential": "USER:PASS",
-        "BaseUrl" : "http://192.168.4.4",
-        "Picture": "/ISAPI/Streaming/channels/101/picture",
-        "Weather": "/ISAPI/System/Video/inputs/channels/1/overlays/text",
-        "WeatherEnable": true
+        "BaseUrl": "http://192.168.4.4",
+        "Picture": "/ISAPI/Streaming/channels/101/picture"
       }
     }
   },
