fixed null issue and added a basic way to find and download playback

--- a/BasicIpCameraSnapshot/appsettings.json
+++ b/BasicIpCameraSnapshot/appsettings.json
@@ -15,25 +15,37 @@
       "1.jpg": {
         "Credential": "USER:PASS",
         "BaseUrl": "http://192.168.4.1",
-        "Picture": "/ISAPI/Streaming/channels/101/picture"
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Download": "/ISAPI/ContentMgmt/download",
+        "PlaybackUrl": "rtsp://192.168.4.1/Streaming/tracks/101",
+        "TrackID": "101"
       },
 
       "2.jpg": {
         "Credential": "USER:PASS",
         "BaseUrl": "http://192.168.4.2",
-        "Picture": "/ISAPI/Streaming/channels/101/picture"
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Download": "/ISAPI/ContentMgmt/download",
+        "PlaybackUrl": "rtsp://192.168.4.2/Streaming/tracks/101",
+        "TrackID": "101"
       },
 
       "3.jpg": {
         "Credential": "USER:PASS",
         "BaseUrl": "http://192.168.4.3",
-        "Picture": "/ISAPI/Streaming/channels/101/picture"
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Download": "/ISAPI/ContentMgmt/download",
+        "PlaybackUrl": "rtsp://192.168.4.3/Streaming/tracks/101",
+        "TrackID": "101"
       },
 
       "4.jpg": {
         "Credential": "USER:PASS",
         "BaseUrl": "http://192.168.4.4",
-        "Picture": "/ISAPI/Streaming/channels/101/picture"
+        "Picture": "/ISAPI/Streaming/channels/101/picture",
+        "Download": "/ISAPI/ContentMgmt/download",
+        "PlaybackUrl": "rtsp://192.168.4.4/Streaming/tracks/101",
+        "TrackID": "101"
       }
     }
   },
