--- a/BasicIpCameraSnapshot/BasicIpCameraSnapshot.csproj
+++ b/BasicIpCameraSnapshot/BasicIpCameraSnapshot.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
