--- a/PTZControl/appsettings.json
+++ b/PTZControl/appsettings.json
@@ -5,31 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Camera": [
-    {
-      "Name": "Front",
-      "Credential": "hello:world",
-      "IP": "255.255.255.255",
-      "Presets": [
-        {
-          "Name": "Presets1",
-          "Id": 1
-        },
-        {
-          "Name": "Presets2",
-          "Id": 2
-        },
-        {
-          "Name": "Presets3",
-          "Id": 4
-        },
-        {
-          "Name": "Presets4",
-          "Id": 3
-        }
-      ]
-    }
-  ]
-}
+  "AllowedHosts": "*"
 }
