--- a/GetDesktop/appsettings.json
+++ b/GetDesktop/appsettings.json
@@ -3,6 +3,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
+      }
     }
   },
   "AllowedHosts": "*"
