mini update 9on get desktop and removed eccc xnml to do json

--- a/GetDesktop/appsettings.json
+++ b/GetDesktop/appsettings.json
@@ -7,8 +7,8 @@
     "Console": {
       "FormatterName": "simple",
       "FormatterOptions": {
-        "SingleLine": true,
-        "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
+        "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] ",
+        "SingleLine": true
       }
     }
   },
