--- a/WeatherUpdate/appsettings.json
+++ b/WeatherUpdate/appsettings.json
@@ -1,13 +1,17 @@
 {
   "Logging": {
-    "Console": {
-      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
-    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "System.Net.Http.HttpClient": "Warning"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] ",
+        "SingleLine": true
+      }
     }
   },
   "AppSettings": {
@@ -16,10 +20,10 @@
       "DelayBeforeStart": 5,
       "Interval": 5,
       "Stations": {
-        "ECCC": {
-          "Name": "ECCC",
-          "Station": "https://dd.weather.gc.ca/citypage_weather/xml/BC/s0000141_e.xml",
-          "PosX": 651,
+        "ECCC_JSON": {
+          "Name": "ECCC_JSON",
+          "Station": "https://meteo.gc.ca/api/app/v3/en/Location/49.245,-123.115",
+          "PosX": 700,
           "PosY": 32,
           "Line": 1,
           "Enable": true
