update nuget, small code syntax, removed duplicated code

--- a/BasicIpCameraSnapshot/appsettings.json
+++ b/BasicIpCameraSnapshot/appsettings.json
@@ -1,7 +1,11 @@
 {
   "Logging": {
     "Console": {
-      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] ",
+        "SingleLine": true
+      }
     },
     "LogLevel": {
       "Default": "Information",
