--- a/BasicIpCameraSnapshot/BasicIpCameraSnapshot.csproj
+++ b/BasicIpCameraSnapshot/BasicIpCameraSnapshot.csproj
@@ -9,12 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.2" />
-      <PackageReference Include="SkiaSharp" Version="3.116.1" />
-      <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.116.1" />
-      <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="3.116.1" />
-      <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="3.116.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.8" />
+      <PackageReference Include="SkiaSharp" Version="3.119.0" />
+      <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.119.0" />
+      <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="3.119.0" />
+      <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="3.119.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CommonHelper\CommonHelper.csproj" />
   </ItemGroup>
 
 </Project>
