--- a/EventLinkageControl/EventLinkageControl.csproj
+++ b/EventLinkageControl/EventLinkageControl.csproj
@@ -6,4 +6,8 @@
       <Nullable>annotations</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonHelper\CommonHelper.csproj" />
+  </ItemGroup>
+
 </Project>
