--- a/GetDesktop/GetDesktop.csproj
+++ b/GetDesktop/GetDesktop.csproj
@@ -12,7 +12,11 @@
     </ItemGroup>
     
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.8" />
+  </ItemGroup>
+    
+  <ItemGroup>
+    <ProjectReference Include="..\CommonHelper\CommonHelper.csproj" />
   </ItemGroup>
 
 </Project>
