--- a/PTZControl/PTZControl.csproj
+++ b/PTZControl/PTZControl.csproj
@@ -7,4 +7,8 @@
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonHelper\CommonHelper.csproj" />
+  </ItemGroup>
+
 </Project>
